<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_saving_state"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kerick.group2_datastorage.SavingStateActivity"
    android:background="@android:color/white">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/header_title"
        android:layout_height="75dp"
        android:textSize="36sp"
        android:gravity="center"
        android:background="@color/group2_light_gray"
        android:layout_margin="16dp"
        android:id="@+id/textViewHeader" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewHeader">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCounter"
            android:textSize="36sp" />

        <Button
            android:text="@string/count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCount"
            android:textColor="@android:color/white"
            android:onClick="count" />
    </LinearLayout>

    <TextView
        android:text="@string/footer_title"
        android:layout_width="match_parent"
        android:id="@+id/textViewFooter"
        android:textSize="36sp"
        android:background="@color/group2_light_gray"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_height="100dp" />
</RelativeLayout>
